- Added: Option to show BP XProfile fields in M2 account page
- Added: ms_get_blog_list_args filter added to show non-public blogs in protectin rules page in network admin
- Added: Define 'MS_CPT_ENABLE_ACCESS_BOX' to enable protection meta box in custom post type
- Added: Filter 'ms_helper_listtable_billing_default_column' added for default column in billing table
- Fixed: Test Memberships was not working (simulation mode)
- Fixed: Protected posts appears in archive page
- Fixed: Conflict with WPEngine Deployment
- Fixed: Wrong message when a coupon is removed
- Fixed: Wrong logic on category protection for multiple membership
- Fixed: Inactive Memberships still available for renewal
- Fixed: BP activation page is always protected in multisite
- Removed: Filter `ms_class_file_override`

1.0.2.9
----------------------------------------------------------------------
- Fixed: Version change

1.0.2.8
----------------------------------------------------------------------
- Added: New import option to import each membership on its own, to prevent memory- or similar overflow issues.
- Added: Settings for PayPal gateways now also list the country "Croatia".
- Added: Filters  'ms_helper_color_index' and 'ms_model_membership_get_color'
- Improved: Memberships can't be assigned to admin users any longer
- Fixed: IE and Edge users can now log in from front end again
- Fixed: Import of M1 data now correctly creates recurring memberships.
- Fixed: For people who saw a PHP notice "WDEV_DEBUG is undefined": It's gone!
- Fixed: Missing translation string added.
- Fixed: Redirect add on works properly again
- Fixed: Nickname now saves when BuddyPress profile fields add on is activated
- Fixed: Missing string in default lost password default email no longer missing
- Fixed: Media protection no longer breaks images in customizer

1.0.2.7
----------------------------------------------------------------------
- Added: Constant 'MS_LOG_EMAILS' to enable log and display email logs