@@ -194,6 +194,13 @@ class MS_Gateway_Stripe_Api extends MS_Model_Option {
 	 * @return M2_Stripe_Charge The resulting charge object.
 	 */
 	public function charge( $customer, $amount, $currency, $description ) {
+                
+                $amount = apply_filters(
+                    'ms_gateway_stripe_charge_amount',
+                    $amount,
+                    $currency
+                );
+                
 		$charge = M2_Stripe_Charge::create(
 			array(
 				'customer' => $customer->id,
