@@ -13,6 +13,7 @@ Change Log:
 - Added: ms_get_blog_list_args filter added to show non-public blogs in protectin rules page in network admin
 - Added: Define 'MS_CPT_ENABLE_ACCESS_BOX' to enable protection meta box in custom post type
 - Added: Filter 'ms_helper_listtable_billing_default_column' added for default column in billing table
+- Added: Filter 'ms_gateway_stripe_charge_amount' and 'ms_gateway_stripe_form_details_after' added to customize the amount for stripe
 - Fixed: Test Memberships was not working (simulation mode)
 - Fixed: Protected posts appears in archive page
 - Fixed: Conflict with WPEngine Deployment
@@ -20,6 +21,7 @@ Change Log:
 - Fixed: Wrong logic on category protection for multiple membership
 - Fixed: Inactive Memberships still available for renewal
 - Fixed: BP activation page is always protected in multisite
+- Fixed: Some unexpected notices and warnings
 - Removed: Filter `ms_class_file_override`
 
 1.0.2.9
